# savorini

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example
.github/workflows/: ci.yml
apps/backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
apps/backend/api/: __init__.py  routes.py
apps/backend/api/routers/: auth.py  deals.py  feed.py  meta.py  venues.py
apps/backend/api/schemas/: __init__.py  common.py
apps/backend/core/: config.py  database.py  exceptions.py  logging.py  redis.py  security.py
apps/backend/domain/: __init__.py  enums.py
apps/backend/domain/entities/: __init__.py  analytics.py  base.py  deal.py  favorite.py  flag.py  media.py  province_rule.py  user.py  venue.py
apps/backend/migrations/: env.py
apps/backend/repositories/: __init__.py  base.py  deal_repository.py  event_log_repository.py  favorite_repository.py  flag_repository.py  interfaces.py  media_repository.py  models.py  province_rule_repository.py  user_repository.py  venue_repository.py
apps/backend/services/: __init__.py  analytics_service.py  compliance_service.py  deal_service.py  moderation_service.py  search_service.py  user_service.py  venue_service.py
apps/mobile/: Dockerfile  app.json  package.json
apps/mobile/app/: _layout.tsx
apps/mobile/app/(tabs)/: _layout.tsx  index.tsx
apps/web-admin/: next.config.js  package.json
apps/web-admin/src/app/: layout.tsx  page.tsx
apps/web-vendor/: Dockerfile  next.config.js  package.json
apps/web-vendor/app/: layout.tsx  page.tsx
docs/: API.md  ARCHITECTURE.md  RUNBOOK.md
ops/scripts/: seed.py
